# cpp_basic_simple_project_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  create_venv.py
src/: CMakeLists.txt  main.cpp
src/example_lib/: CMakeLists.txt
src/example_lib/include/example_lib/: example_lib.hpp
src/execs/: CMakeLists.txt
src/execs/Exec1/: CMakeLists.txt  main.cpp
src/execs/exec_1/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/ExampleLib1/: CMakeLists.txt
src/libs/ExampleLib1/include/ExampleLib1/: ExampleLib1.hpp
src/libs/ExampleLib1/include/ExampleLib1/mocks/: ExampleLib1_Mock.hpp
src/libs/ExampleLib1/src/: ExampleLib1.cpp
src/libs/ExampleLib1/tests/: CMakeLists.txt  ExampleLib1_Test.cpp
src/libs/ExampleLib2/: CMakeLists.txt
src/libs/ExampleLib2/include/ExampleLib2/: ExampleLib2.hpp
src/libs/ExampleLib2/src/: ExampleLib2.cpp
src/libs/ExampleLib2/tests/: CMakeLists.txt  ExampleLib2_Test.cpp
src/libs/example_lib_1/src/: example_lib.cpp
tests/: CMakeLists.txt  Test1.cpp
